// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > schema > patchSchema > audit > expected call 1`] = `
{
  "active": false,
  "description": "Three yellowtail kingfish with okra, beans, dried chinese broccoli, parsnip and goat milk. With a side of baked pear, and your choice of soy flour or jarrahdale pumpkin.",
  "hidden": false,
  "name": "Dr. Garry Cummerata",
}
`;

exports[`routes > schema > patchSchema > successfully updates the schema 1`] = `
{
  "schema": {
    "active": false,
    "description": "Three yellowtail kingfish with okra, beans, dried chinese broccoli, parsnip and goat milk. With a side of baked pear, and your choice of soy flour or jarrahdale pumpkin.",
    "hidden": false,
    "name": "Dr. Garry Cummerata",
  },
}
`;

exports[`routes > schema > patchSchema > throws 400 when trying to update id property 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "unrecognized_keys",
          "keys": [
            "id",
          ],
          "message": "Unrecognized key(s) in object: 'id'",
          "path": [
            "body",
          ],
        },
      ],
    },
    "message": "Path: body - Message: Unrecognized key(s) in object: 'id'",
    "name": "Bailo Error",
  },
}
`;
